--- a/Config/genvariables.config
+++ b/Config/genvariables.config
@@ -1,6 +1,6 @@
 
 BOOL : {"Info_isData"}
-INT : {"Info_EventNumber","Info_Luminosity","Info_RunNumber","Channel_Idx","Channel_Idx_Final","Channel_Jets","Channel_Jets_Abs","Channel_Lepton_Count","Channel_Lepton_Count_Final","GenJet_Count","GenPar_Count"}
+INT : {"Info_EventNumber","Info_Luminosity","Info_RunNumber","Channel_Idx","Channel_Idx_Final","Channel_Jets","Channel_Jets_Abs","Channel_Lepton_Count","Channel_Lepton_Count_Final","Channel_Lepton_Plus","Channel_Lepton_Minus","GenJet_Count","GenPar_Count"}
 #UINT : {""}
 #FLOAT : {""}
 #DOUBLE : {""}
