--- a/Config/variables.config
+++ b/Config/variables.config
@@ -1,6 +1,6 @@
 
 BOOL : {"Info_isData","Cut_ejet_Trigger","Cut_ejet_Lepton","Cut_ejet_MuonVeto","Cut_ejet_ElectronVeto","Cut_ejet_Step1","Cut_ejet_Step2a","Cut_ejet_Step2b","Cut_mjet_Trigger","Cut_mjet_Lepton","Cut_mjet_MuonVeto","Cut_mjet_ElectronVeto","Cut_mjet_Step1","Cut_mjet_Step2a","Cut_mjet_Step2b"}
-INT : {"Info_EventNumber","Info_Luminosity","Info_RunNumber","Channel_Idx","Channel_Idx_Final","Channel_Jets","Channel_Jets_Abs","Channel_Lepton_Count","Channel_Lepton_Count_Final","GenJet_Count","GenPar_Count","PV_Count","Muon_Count","Elec_Count","Jet_Count","Cut_Jet_Count","Cut_BJet_Count"}
+INT : {"Info_EventNumber","Info_Luminosity","Info_RunNumber","Channel_Idx","Channel_Idx_Final","Channel_Jets","Channel_Jets_Abs","Channel_Lepton_Count","Channel_Lepton_Count_Final","Channel_Lepton_Plus","Channel_Lepton_Minus","GenJet_Count","GenPar_Count","PV_Count","Muon_Count","Elec_Count","Jet_Count","Cut_Jet_Count","Cut_BJet_Count"}
 #UINT : {""}
 #FLOAT : {""}
 #DOUBLE : {""}
