--- a/Config/genvariables.config
+++ b/Config/genvariables.config
@@ -10,6 +10,6 @@ TLorentzVector : {"GenPar","GenJet","GenTop"}
 #BOOL_VECTOR : {""}
 INT_VECTOR : {"GenPar_Dau1_Idx","GenPar_Dau2_Idx","GenPar_Dau_Counter","GenPar_Idx","GenPar_pdgId","GenPar_Mom1_Idx","GenPar_Mom2_Idx","GenPar_Mom_Counter","GenPar_Status"}
 #UINT_VECTOR : {""}
-FLOAT_VECTOR : {"GenJet_HCalEnergy","GenJet_ECalEnergy"}
+#FLOAT_VECTOR : {"GenJet_HCalEnergy","GenJet_ECalEnergy"}
 #DOUBLE_VECTOR : {""}
 #STRING_VECTOR : {""}
