--- a/Config/variables.config
+++ b/Config/variables.config
@@ -1,15 +1,15 @@
 
-BOOL : {"Info_isData","Cut_ejet_Trigger","Cut_ejet_Lepton","Cut_ejet_MuonVeto","Cut_ejet_ElectronVeto","Cut_ejet_Step1","Cut_ejet_Step2a","Cut_ejet_Step2b","Cut_mjet_Trigger","Cut_mjet_Lepton","Cut_mjet_MuonVeto","Cut_mjet_ElectronVeto","Cut_mjet_Step1","Cut_mjet_Step2a","Cut_mjet_Step2b"}
-INT : {"Info_EventNumber","Info_Luminosity","Info_RunNumber","Channel_Idx","Channel_Idx_Final","Channel_Jets","Channel_Jets_Abs","Channel_Lepton_Count","Channel_Lepton_Count_Final","Channel_Lepton_Plus","Channel_Lepton_Minus","GenJet_Count","GenPar_Count","PV_Count","Muon_Count","Elec_Count","Jet_Count","Cut_Jet_Count","Cut_BJet_Count"}
+BOOL : {"Info_isData","Cut_Event_Filter","Cut_e_Trigger","Cut_m_Trigger","Cut_em_Trigger""Cut_dl_Opposite","Cut_dl_Same","Cut_ee_LeptonPair","Cut_mm_LeptonPair","Cut_em_LeptonPair","Cut_e_MuonVeto","Cut_m_MuonVeto","Cut_m_Charge","Cut_m_MassVeto","Cut_m_ElectronVeto","Cut_e_ElectronVeto","Cut_e_Charge","Cut_e_MassVeto","Cut_LeptonMass","Cut_MT_min","Cut_MET","Cut_ee_Step0a","Cut_ee_Step0b","Cut_ee_Step0c","Cut_ee_Step1a","Cut_ee_Step1b","Cut_ee_Step2","Cut_ee_Step3","Cut_ee_Step4","Cut_ee_Step5","Cut_mm_Step0a","Cut_mm_Step0b","Cut_mm_Step0c","Cut_mm_Step1a","Cut_mm_Step1b","Cut_mm_Step2","Cut_mm_Step3","Cut_mm_Step4","Cut_mm_Step5","Cut_em_Step0a","Cut_em_Step0b","Cut_em_Step0c","Cut_em_Step1a","Cut_em_Step1b","Cut_em_Step2","Cut_em_Step3","Cut_em_Step4","Cut_em_Step5"}
+INT : {"Info_EventNumber","Info_Luminosity","Info_RunNumber","Channel_Idx","Channel_Idx_Final","Channel_Jets","Channel_Jets_Abs","Channel_Lepton_Count","Channel_Lepton_Count_Final","Channel_Lepton_Plus","Channel_Lepton_Minus","GenJet_Count","GenPar_Count","PV_Count","Muon_Count","Elec_Count","Jet_Count","Cut_Jet_Count","Cut_BJet_Count","Num_PlusLepton","Num_MinusLepton","Num_PlusMuon","Num_MinusMuon","Num_PlusElectron","Num_MinusElectron"}
 #UINT : {""}
 #FLOAT : {""}
-#DOUBLE : {""}
+DOUBLE : {"HT","HM","GenWeight","PileUpWeight","TotalWeight"}
 #STRING : {""}
 TLorentzVector : {"GenPar","GenJet","GenTop","Muon","Cut_Muon","Elec","Cut_Elec","Cut_Jet","Jet","MET"}
 
-BOOL_VECTOR : {"Muon_Cut_Isolated","Muon_Cut_Veto","Muon_isIsoID","Muon_isVetoID","Elec_Cut_Isolated","Elec_Cut_Veto","Elec_isIsoID","Elec_isVetoID","Elec_Conversion","Cut_Jet_bTag","Jet_isJetID","Jet_isCleanedJet"}
+BOOL_VECTOR : {"Muon_Cut_Isolated","Muon_Cut_Veto","Muon_isIsoID","Muon_isVetoID","Elec_Cut_Isolated","Elec_Cut_Veto","Elec_isIsoID","Elec_isVetoID","Elec_Conversion","Elec_ChargeId_GsfCtfPx","Cut_Jet_bTag","Jet_isJetID","Jet_isCleanedJet","Muon_isTight","Muon_isMedium","Muon_isLoose","Muon_isSoft","Elec_isTight","Elec_isMedium","Elec_isLoose","Elec_isVeto"}
 INT_VECTOR : {"GenPar_Dau1_Idx","GenPar_Dau2_Idx","GenPar_Dau_Counter","GenPar_Idx","GenPar_pdgId","GenPar_Mom1_Idx","GenPar_Mom2_Idx","GenPar_Mom_Counter","GenPar_Status","Muon_pdgId","Muon_Charge","Elec_pdgId","Elec_Charge","Cut_Jet_Index"}
 #UINT_VECTOR : {""}
-FLOAT_VECTOR : {"GenJet_HCalEnergy","GenJet_ECalEnergy"}
-DOUBLE_VECTOR : {"Muon_PFIsodBeta04","Elec_PFIsodBeta03","Elec_Supercluster_Eta","Jet_bDisc","Jet_cDiscCvsL","Jet_cDiscCvsB"}
+#FLOAT_VECTOR : {"GenJet_HCalEnergy","GenJet_ECalEnergy"}
+DOUBLE_VECTOR : {"Muon_PFIsodBeta04","Elec_PFIsodBeta03","Elec_Supercluster_Eta","Jet_bDisc","Jet_cDiscCvsL","Jet_cDiscCvsB","Muon_CorrectedPt","Muon_CorrectedPtError","Muon_dPtOverPt","Jet_qgLikelihood","Muon_ScaleFactor","Elec_ScaleFactor"}
 #STRING_VECTOR : {""}
