Fixed Version (CatTools v806)

--- a/Config/hist.config
+++ b/Config/hist.config
@@ -1,14 +1,14 @@
-Hist       = {"numPV",	"MET",	"HT",	"HM",	"numJets",	"numBJets",	"InvMass"}
-Hist_Bins  = {100,	1000,	3000,	5000,	30,		30,		1000}
+Hist       = {"numPV",	"MET",	"HT",	"HM",	"numJets",	"numBJets",	"AllLepton_InvMass"}
+Hist_Bins  = {100,	1000,	3000,	5000,	20,		10,		1000}
 Hist_Start = {0,	0,	0,	0,	0,		0,		0}
-Hist_End   = {100,	1000,	3000,	5000,	30,		30,		1000}
+Hist_End   = {100,	1000,	3000,	5000,	20,		10,		1000}
 
-Lepton       = {"Elec_1_Pt",	"Elec_1_Eta",	"Elec_1_Phi",	"Elec_1_E",					"Elec_2_Pt","Elec_2_Eta","Elec_2_Phi","Elec_2_E","Muon_1_Pt","Muon_1_Eta","Muon_1_Phi","Muon_1_E","Muon_2_Pt","Muon_2_Eta","Muon_2_Phi","Muon_2_E"}
-Lepton_Bins  = {1000,		1000,		1000,		1000}
-Lepton_Start = {0,		-5,		-3.14,		0}
-Lepton_End   = {1000,		5,		3.14,		1000}
+Lepton       = {"Elec_1_Pt",	"Elec_1_Eta",	"Elec_1_Phi",	"Elec_1_E",	"Elec_1_Iso03",	"Elec_1_Iso04",	"Elec_1_miniIso",	"Elec_1_Pt_rel",	"Elec_1_Pt_ratio",			"Elec_2_Pt","Elec_2_Eta","Elec_2_Phi","Elec_2_E","Elec_2_Iso03","Elec_2_Iso04","Elec_2_miniIso","Elec_2_Pt_rel","Elec_2_Pt_ratio","Muon_1_Pt","Muon_1_Eta","Muon_1_Phi","Muon_1_E","Muon_1_Iso03","Muon_1_Iso04","Muon_1_miniIso","Muon_1_Pt_rel","Muon_1_Pt_ratio","Muon_2_Pt","Muon_2_Eta","Muon_2_Phi","Muon_2_E","Muon_2_Iso03","Muon_2_Iso04","Muon_2_miniIso","Muon_2_Pt_rel","Muon_2_Pt_ratio","Elec_3_Pt","Elec_3_Eta","Elec_3_Phi","Elec_3_E","Elec_3_Iso03","Elec_3_Iso04","Elec_3_miniIso","Elec_3_Pt_rel","Elec_3_Pt_ratio","Muon_3_Pt","Muon_3_Eta","Muon_3_Phi","Muon_3_E","Muon_3_Iso03","Muon_3_Iso04","Muon_3_miniIso","Muon_3_Pt_rel","Muon_3_Pt_ratio","AddElec_1_Pt","AddElec_1_Eta","AddElec_1_Phi","AddElec_1_E","AddElec_1_Iso03","AddElec_1_Iso04","AddElec_1_miniIso","AddElec_1_Pt_rel","AddElec_1_Pt_ratio","AddMuon_1_Pt","AddMuon_1_Eta","AddMuon_1_Phi","AddMuon_1_E","AddMuon_1_Iso03","AddMuon_1_Iso04","AddMuon_1_miniIso","AddMuon_1_Pt_rel","AddMuon_1_Pt_ratio"}
+Lepton_Bins  = {1000,		1000,		1000,		1000,		100,		100,		100,			200,			150}
+Lepton_Start = {0,		-5,		-3.14,		0,		0,		0,		0,			0,			0}
+Lepton_End   = {1000,		5,		3.14,		1000,		0.2,		0.2,		0.2,			20,			1.5}
 
-Jet       = {"Jet_1_Pt",	"Jet_1_Eta",	"Jet_1_Phi",	"Jet_1_E",	"Jet_1_CSV",	"Jet_1_qg",		"Jet_2_Pt","Jet_2_Eta","Jet_2_Phi","Jet_2_E","Jet_2_CSV","Jet_2_qg","Jet_3_Pt","Jet_3_Eta","Jet_3_Phi","Jet_3_E","Jet_3_CSV","Jet_3_qg","Jet_4_Pt","Jet_4_Eta","Jet_4_Phi","Jet_4_E","Jet_4_CSV","Jet_4_qg","BJet_1_Pt","BJet_1_Eta","BJet_1_Phi","BJet_1_E","BJet_1_CSV","BJet_1_qg","BJet_2_Pt","BJet_2_Eta","BJet_2_Phi","BJet_2_E","BJet_2_CSV","BJet_2_qg"}
+Jet       = {"Jet_1_Pt",	"Jet_1_Eta",	"Jet_1_Phi",	"Jet_1_E",	"Jet_1_CSV",	"Jet_1_qg",		"Jet_2_Pt","Jet_2_Eta","Jet_2_Phi","Jet_2_E","Jet_2_CSV","Jet_2_qg","Jet_3_Pt","Jet_3_Eta","Jet_3_Phi","Jet_3_E","Jet_3_CSV","Jet_3_qg","Jet_4_Pt","Jet_4_Eta","Jet_4_Phi","Jet_4_E","Jet_4_CSV","Jet_4_qg","BJet_1_Pt","BJet_1_Eta","BJet_1_Phi","BJet_1_E","BJet_1_CSV","BJet_1_qg","BJet_2_Pt","BJet_2_Eta","BJet_2_Phi","BJet_2_E","BJet_2_CSV","BJet_2_qg","BJet_3_Pt","BJet_3_Eta","BJet_3_Phi","BJet_3_E","BJet_3_CSV","BJet_3_qg"}
 Jet_Bins  = {2000,		1000,		1000,		2000,		200,		200}
 Jet_Start = {0,			-5,		-3.14,		0,		-1,		-1}
 Jet_End   = {2000,		5,		3.14,		2000,		1,		1}
